# HyperPenguinOS

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  build.sh
config/rootfs/etc/: bashrc  fstab  hostname  hosts  inputrc  issue  machine-info  profile  vconsole.conf
config/rootfs/etc/systemd/network/: 20-wired.network
docs/: PLAN.md  architecture.md  building.md  filesystem.md  hbox.md  hpk.md  immutable.md  index.html  index.md  plasma-theming.md
docs/css/: style.css
docs/ref/: BUILD-STATUS.md  Build-Instructions-LFS-Ch8.md  building.md
kernel/cachyos-patches/6.18/misc/: 0001-handheld.patch
kernel/config/: .config
kernel/patches/: gcc-15.2.0-libcody-char8_t-1.patch
scripts/: 00-env.sh  00.5-setup-config.sh  01-download-sources.sh  02-toolchain.sh  03-base-system.sh  04-kernel-cachyos.sh  05-ab-btrfs.sh  06-user-fs.sh  07-wayland-mesa.sh  08-qt6.sh  09-kf6.sh  10-plasma-6.sh  11-build-hpk.sh  12-build-hbox.sh  13-build-kcm.sh  14-calamares.sh  15-build-iso.sh  test-vm.sh
scripts/utils/: build-package.sh
src/kcm-rollback/: CMakeLists.txt  metadata.desktop  metadata.json
src/kcm-rollback/src/: kcm_rollback.cpp  kcm_rollback.h  rollback_backend.cpp
src/kcm-rollback/ui/: RollbackPage.qml  SnapshotDelegate.qml
web/css/: style.css
web/js/: main.js
